--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
         <h1>Compendium of the Great Rahimin!</h1>
     </div>
     <nav id="top-bar">
-        <a href="/home/index.html"><div class="items" id="Home">Home</div></a>
-        <a href="/about/about.html"><div class="items" id="About Me">About Me</div></a>
-        <a href="/portfolio/portfolio.html"><div class="items" id ="Portfolio">Portfolio</div></a>
-        <a href="/more_info/info.html"><div class="items" id ="Misc_Info">Misc. Info</div></a>
+        <a href="index.html"><div class="items" id="Home">Home</div></a>
+        <a href="about.html"><div class="items" id="About Me">About Me</div></a>
+        <a href="portfolio.html"><div class="items" id ="Portfolio">Portfolio</div></a>
+        <a href="info.html"><div class="items" id ="Misc_Info">Misc. Info</div></a>
     </nav>
+
     <div id="home-body">
         <p class="paras">Welcome! The website before you is mainly to conveniently relay principal information regarding the Great Rahimin!</p> 
         <p class="paras" id="special">They say anyone who visits this site gets 1000 years of good luck minimum...</p>
