--- a/about.html
+++ b/about.html
@@ -16,8 +16,13 @@
         <a href="info.html"><div class="items" id ="Misc_Info">Misc. Info</div></a>
     </nav>
 
+    <div id="container">
    <div id="home-body">
-    <p class="paras">Hi! My name is Rahimin Mohammed. I currently reside in Queens, New York a.k.a "<span class="italics">The World's Borough.</span>"</p> 
+    <p class="paras" id="about-para">Hi! My name is Rahimin Mohammed. I'm 17 years old, I'm your typical brown bengali boy living in Queens, New York a.k.a "<span class="italics">The World's Borough</span>", and I currently attend the specialized high school Queen's High School for the Sciences at York College. I have several hobbies I am passionate about in my free time such as reading webnovels, reading webtoons, listening to music, watching anime, browsing Reddit, playing mobile games, etc. Just generally being chronically online 24/7. I have recently taken an interest in coding and hope to advance further in this subject.</p> 
     </div>
+    <div>
+        <img class="slep" src="images/selfpic.jpg">
+    </div>
+
 </body>
 </html>
