--- a/info.html
+++ b/info.html
@@ -15,5 +15,23 @@
         <a href="portfolio.html"><div class="items" id ="Portfolio">Portfolio</div></a>
         <a href="info.html"><div class="items" id ="Misc_Info">Misc. Info</div></a>
     </nav>
+
+    <div id="home-body">
+        <div class="list">
+        <h2>Connect with me:</h2>
+        <ul>
+            <li><a class="link" href="https://github.com/RahiminASC23" target="_blank">Github</a></li>
+            <li><a class="link" href="https://www.linkedin.com/in/rahimin-mohammed-924b10286/" target="_blank">LinkedIn</a></li>
+        </ul>
+        </div>
+        <div class="list">
+        <h2>Extra fun stuff:</h2>
+        <ul>
+            <li><a class="link" href="https://docs.google.com/document/d/1gJ86ku6-RCFahAbmNkHJZM2qecEAL8k6VwuCAu6RqeA/edit?usp=sharing" target="_blank">Document of a lot of things I am interested in</a></li>
+            <li><a class="link" href="https://open.spotify.com/playlist/2IJEXD92JRZkO3nosuAiKs?si=25efb986e6274f35&pt=64235e490614e4e3453fbcae56464b81" target="_blank">Music Playlist</a></li>
+        </ul>
+        </div>
+    </div>
+    
 </body>
 </html>
