--- a/portfolio.html
+++ b/portfolio.html
@@ -15,5 +15,15 @@
         <a href="portfolio.html"><div class="items" id ="Portfolio">Portfolio</div></a>
         <a href="info.html"><div class="items" id ="Misc_Info">Misc. Info</div></a>
     </nav>
+
+    <div id="home-body">
+      <h2>Coding projects:</h2>
+         <a class="link" href="https://akmhossain.github.io/Asteroid-Assault-Game/" target="_blank">Asteroid Assault</a>
+      <h2>Art:</h2>
+         <div class="picture-box">
+         <img class="slep" src="images/fire.jpg">
+         <img class="slep" src="images/legs.jpg">
+         <img class="slep" src="images/pikachu.jpg">
+         </div>
 </body>
 </html>
